--- a/DataAccess/DataAccess.csproj
+++ b/DataAccess/DataAccess.csproj
@@ -1,12 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
-  <ItemGroup>
-    <Folder Include="DAO\" />
-    <Folder Include="Repository\" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\BusinessObject\BusinessObject.csproj" />
+	</ItemGroup>
 
 </Project>
